Fix image overflow

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -147,6 +147,7 @@ sup {
  */
 
 img {
+  max-width: 100%;
   border-style: none;
 }
 
